--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="CustomTheme" parent="@android:style/Theme.Black">
+    <style name="CustomTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
         <item name="android:startYear">1890</item>
     </style>
-    <style name="CustomTitleBarTheme" parent="@android:style/Theme.Black">
+    <style name="CustomTitleBarTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowTitleSize">50.0dip</item>
     </style>
 </resources>
