--- a/app/src/main/res/layout/profiles_list.xml
+++ b/app/src/main/res/layout/profiles_list.xml
@@ -1,22 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:padding="5.0dip">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="5.0dip">
 
     <ImageView
         android:id="@id/logo"
-        android:layout_width="30.0dip"
-        android:layout_height="30.0dip"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:layout_marginLeft="5.0dip"
-        android:layout_marginRight="20.0dip"
         android:layout_marginTop="5.0dip"
-        android:src="@drawable/ios_logo"/>
+        android:layout_marginRight="20.0dip"
+        android:src="@mipmap/avatar_default" />
 
     <TextView
         android:id="@id/label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
         android:text="@id/label"
-        android:textSize="20.0dip"/>
+        android:textColor="@color/color_24272B"
+        android:textSize="16sp" />
+
+
+    <TextView
+        android:id="@+id/tv_start"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginRight="20dp"
+        android:gravity="center_vertical"
+        android:text="开始检测"
+        android:textColor="@color/colorPrimary"
+        android:textSize="13sp" />
+
+    <TextView
+        android:id="@+id/tv_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginRight="24dp"
+        android:gravity="center_vertical"
+        android:text="修改"
+        android:textColor="@color/colorPrimary"
+        android:textSize="13sp" />
 </LinearLayout>
