--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="colorPrimary">#05B9D8</color>
+    <color name="colorPrimaryDark">#05B9D8</color>
+    <color name="colorAccent">#05B9D8</color>
+
     <color name="background">#3500ffff</color>
+    <color name="white">#ffffff</color>
     <color name="red">#ffff0000</color>
     <color name="green">#ff00ff00</color>
+    <color name="color_33">#333333</color>
+    <color name="color_66">#666666</color>
+    <color name="color_99">#999999</color>
+    <color name="color_ff7998">#FF7998</color>
+    <color name="color_5272E8">#5272E8</color>
+    <color name="color_314CA7">#314CA7</color>
+    <color name="color_24272B">#24272B</color>
+    <color name="color_D3DFEF">#D3DFEF</color>
 </resources>
