--- a/app/src/main/res/layout/detect_image_item.xml
+++ b/app/src/main/res/layout/detect_image_item.xml
@@ -1,22 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical"
-    android:padding="5.0dip">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@id/grid_item_image"
-        android:layout_width="90.0dip"
-        android:layout_height="90.0dip"
-        android:layout_marginRight="5.0dip"
-        android:gravity="center" />
-
-    <TextView
-        android:id="@id/grid_item_label"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5.0dip"
-        android:text="@id/label" />
+        android:layout_margin="6dp"
+        android:background="@drawable/bg_item_detect"
+        android:orientation="vertical"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="4dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@id/grid_item_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:gravity="center" />
+
+            <TextView
+                android:id="@id/grid_item_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:textColor="#ff666666"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
