--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -27,7 +27,7 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_marginRight="20dp"
-                    android:src="@drawable/ic_launcher" />
+                    android:src="@mipmap/ic_logo" />
 
                 <LinearLayout
                     android:layout_width="0dp"
